# pygamepal

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  cameraExample.py  fullExample.py  gameExample.py  gameTemplate.py  inputExample.py  pygameTemplate.py  pygame_utils.py  pyproject.toml  requirements.txt  spriteImageExample.py
docs/: conf.py  modules.rst  pygamepal.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  pygamepal.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pygamepal.html  search.html  (+1 more)
examples/: animatorExample.py  buttonExample.py  cameraExample.py  colliderExample.py  dialogueExample.py  fullExample.py  gameExample.py  inputExample.py  keyInputExample.py  lightingExample.py  mouseInputExample.py  particlesExample.py  sceneExample.py  spriteExample.py  spriteImageExample.py  spriteImageShowcase.py  test.py  transitionExample.py  transitionShowcase.py  triggerExample.py
pygame_examples/: pygame_full_camera.py  pygame_simple_camera.py
src/: pygame_utils.py
src/pygamepal/: __init__.py  animation.py  animator.py  button.py  camera.py  collider.py  dialogue.py  dialoguePage.py  drawText.py  easingFunctions.py  flatten.py  game.py  globals.py  input.py  lighting.py  module.py  particle.py  particleEmitter.py  particles.py  pygamepal.py  scene.py  splitTexture.py  sprite.py  spriteImage.py  spriteTextureList.py  textureList.py  transition.py  trigger.py
src/pygamewrapper/: pygamewrapper.py
templates/: gameTemplate.py  pygameTemplate.py
(+4 files in other folders)
