[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygamepal"
version = "0.6.3"
authors = [
  { name="Rik Cross", email="rik.j.cross@gmail.com" },
]
description = "A library of classes and helper functions to support game development in Pygame"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rik-cross/pygamepal"
"Suggestions and bugs" = "https://github.com/rik-cross/pygamepal/issues"